syntax ="proto3";

package project;

import "google/protobuf/timestamp.proto";

option go_package="project";

message Deploy {
    string id = 1;
    google.protobuf.Timestamp createdTime = 2;
    google.protobuf.Timestamp updatedTime = 3;
    string projectID = 4;
    string name = 5;
    SSHConfig sshConfig = 6;
    ContainerConfig containerConfig = 7;
}

message SSHConfig {
   string host = 1;
   string user = 2;
   string sshType = 3;
   string password = 4;
   string sshKey = 5;
}

message ContainerConfig {
   string name = 1;
   string networkType = 2;
   string ip = 3;
   repeated string ports = 4;
   repeated string environments = 5;
}

message getDeployReq {
   string id = 1;
}

message getDeployRsp {
   Deploy result = 1;
}

message addDeployReq {
    string name = 1;
    string projectID = 2;
    SSHConfig sshConfig = 3;
    ContainerConfig containerConfig = 4;
}

message addDeployRsp {
   Deploy result = 1;
}

message updateDeployReq {
   Deploy payload = 1;
}

message updateDeployRsp {
   bool result = 1;
}

message deleteDeployReq {
   string id = 1;
}

message deleteDeployRsp{
   bool result = 1;
}

message deployReq {
    string id = 1;
}

message deployRsp {
   bool result = 2;
}

service deploy {
   rpc getDepoly(getDeployReq) returns(getDeployRsp);
   rpc addDeploy(addDeployReq) returns(addDeployRsp);
   rpc updateDeploy(updateDeployReq) returns(updateDeployRsp);
   rpc deleteDeploy(deleteDeployReq) returns(deleteDeployRsp);
   rpc deploy(deployReq) returns(deployRsp);
}
